[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/NPCGeneric.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=2]
[ext_resource path="res://Scripts/NearCheck.gd" type="Script" id=3]
[ext_resource path="res://Graphics/ButtonPrompt/Exit.tres" type="Animation" id=4]
[ext_resource path="res://Graphics/ButtonPrompt/ScenesOut.tres" type="Animation" id=5]
[ext_resource path="res://Graphics/ButtonPrompt/Enter.tres" type="Animation" id=6]

[sub_resource type="CapsuleShape2D" id=5]
radius = 25.6357
height = 18.8352

[sub_resource type="CapsuleShape2D" id=6]
radius = 85.2516
height = 47.2977

[node name="NPC" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
process_priority = 1
scale = Vector2( 0.156623, 0.156623 )
texture = ExtResource( 1 )

[node name="CharacterCollision" type="CollisionShape2D" parent="."]
position = Vector2( -0.814543, 12.8051 )
shape = SubResource( 5 )

[node name="NearPrompt" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="PromptArea" type="CollisionShape2D" parent="NearPrompt"]
shape = SubResource( 6 )

[node name="PromptLabel" type="Label" parent="NearPrompt"]
margin_left = -73.0184
margin_top = -117.825
margin_right = 81.9816
margin_bottom = -101.825
rect_pivot_offset = Vector2( 0.031, 0 )
text = "Press [Space] to Talk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptAnim" type="AnimationPlayer" parent="NearPrompt"]
anims/Enter = ExtResource( 6 )
anims/Exit = ExtResource( 4 )
anims/Out = ExtResource( 5 )
